[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'mongo-taskqueue'
version = '1.0.4'
description = 'Queueing data structure on top of a MongoDB collection'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
maintainers = [
    { name = 'Shawn Azdam', email = 'shawn@azdam.com' }
]
keywords = ['mongo', 'mongodb', 'queue', 'task', 'taskqueue']
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = [
    'pymongo>=4.15.5,<5',
]
requires-python = '>=3.9'

[project.optional-dependencies]
dev = [
    'mypy>=1.10',
    'ruff>=0.5.0',
]
docs = [
    'mkdocs>=1.6.0',
    'mkdocs-material>=9.5.0',
]
async = [
    'motor>=3.4',
]

[project.urls]
Homepage = 'https://github.com/SHi-ON/mongo-taskqueue'
Repository = 'https://github.com/SHi-ON/mongo-taskqueue'
Issues = 'https://github.com/SHi-ON/mongo-taskqueue/issues'
Changelog = 'https://github.com/SHi-ON/mongo-taskqueue/blob/main/CHANGELOG.md'
Documentation = 'https://shi-on.github.io/mongo-taskqueue/'

[project.scripts]
mongotq = 'mongotq.cli:main'

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mongotq = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
